--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             const userArchetype = archetypes[maxScoreIndex];
 
             questionContainer.innerHTML = `
-                <div class="archetype">You belong to the: ${userArchetype}</div>
+                <div class="archetype">You belong to : ${userArchetype} archetype </div>
                 <button class="retake-button" onclick="restartSurvey()">Retake Survey</button>
             `;
         }
